KAAV-3606: fix layout shift and focus ring clipping on tooltip focus

--- a/src/components/input/Input.scss
+++ b/src/components/input/Input.scss
@@ -15,6 +15,7 @@
     justify-content: flex-start;
     z-index: 1;
     max-width: 70%;
+    margin-bottom: 3px;
     .input-title{
       display: flex;
       flex-flow: column;
